Revert "[Fix]: Main content overlaps the sidebar"

--- a/src/App.css
+++ b/src/App.css
@@ -249,7 +249,6 @@ textarea {
   padding-top: 20px;
   left: 240px;
   position: absolute;
-  z-index: -1;
 }
 
 .homePage .post {
